# j5serdes

./: .gitignore  Makefile  build_config.template
src/: Makefile.in  configure.ac  j5serdes.cc  j5serdes.h  main.mk.in
src/apps/: subdir.mk.in
src/apps/j5tojson/: main.cc  subdir.mk.in
test/: Makefile.in  main.mk.in  minitest-main.cc  minitest.cc  utest-json-object.cc
utest/: Makefile.in  configure.ac  main.mk.in  minitest-main.cc  minitest.cc  minitest.h  utest-infra.cc  utest-json-object.cc
